
    o	deparse(control="S_compatible") now never uses backticks.

    o   X-spline drawing is improved for cases where the control
        points are located well off the edges of the device.

        The symptom of this problem is the error "reached MAXNUMPTS".

    o   exists() with mode= "any" will no longer run an active binding's
        function.



	**************************************************
	*						 *
	*	       2.8 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 2.8.1 patched


NEW FEATURES

    o	R CMD check has a new argument '--install-args' to pass
	command-line arguments to INSTALL.
	E.g. --install-args="--docs=normal" on Windows if the HTML
	Help Workshop is not installed.

    o	R-Forge has been added to R_HOME/etc/repositories, so it will
    	be available interactively in setRepositories().


INSTALLATION

    o	--with-ICU is now supported (and recommended) on Mac OS X using
	Apple's supplied port.  Note however that the locale category
	LC_COLLATE cannot be changed whilst R is running on Apple's
	version of ICU.

	Configure supports a wider range of ICU versions on other
	OSes: version 3.0 should suffice, and 3.2, 3.8 and 4.0 have
	been tested.


BUG FIXES

    o	grid-based plots no longer reset the base text size to the
	default 96dpi in cairo-based bitmap devices.

    o	Rd conversion was incorrectly parsing \\\* and \\\{ (and other
	cases with an odd number of backslashes greater than one).

	Text conversion of \code{\ etc} was incorrect (a single
	backslash stands for itself inside \code).

	\code{} inside \examples{} is now fixed up (but the warning
	remains, since it will be handled incorrectly in earlier
	versions of R).

    o	as.matrix.data.frame() could fail if coercion changed the
	dimension of one of the columns (as e.g. the coercion of a "Surv"
	object to a character vector does).

    o	When extracting part of a complex list structure using [[]]