@@ -1,5 +1,5 @@
 
-R version 2.9.0 Under development (unstable) (2009-01-26 r47727)
+R version 2.9.0 Under development (unstable) (2009-02-27 r48020)
 Copyright (C) 2009 The R Foundation for Statistical Computing
 ISBN 3-900051-07-0
 
@@ -5613,10 +5613,10 @@ $y
 +          i = as.character(NA), j = c("foo", NA, "bar")
 +          )
 > dput(x, control=NULL)
-list(a = NA, b = NA, c = NA, d =  NA, e = 1, f = 1, g = 1:3, 
-    h = c(NA, 1, 2, 3), i = NA, j = c("foo", NA, "bar"))
+list(a = NA, b = NA, c = NA, d = NA, e = 1, f = 1, g = 1:3, h = c(NA, 
+1, 2, 3), i = NA, j = c("foo", NA, "bar"))
 > dput(x, control="keepInteger")
-list(a = NA, b = NA_integer_, c = NA, d =  NA, e = 1, f = 1L, 
+list(a = NA, b = NA_integer_, c = NA, d = NA, e = 1, f = 1L, 
     g = 1:3, h = c(NA, 1L, 2L, 3L), i = NA, j = c("foo", NA, 
     "bar"))
 > dput(x, control="keepNA")
@@ -5635,10 +5635,9 @@ structure(list(a = NA, b = NA_integer_, c = NA_real_, d = NA_complex_,
 "e", "f", "g", "h", "i", "j"))
 > dput(x, control=c("all", "S_compatible"))
 structure(list(a = NA, b = as.integer(NA), c = as.double(NA), 
-    d = as.complex( NA), e = 1., f = as.integer(1), g = 1:3, 
-    h = as.integer(c(NA, 1, 2, 3)), i = as.character(NA), j = c("foo", 
-    NA, "bar")), .Names = c("a", "b", "c", "d", "e", "f", "g", 
-"h", "i", "j"))
+    d = as.complex(NA), e = 1., f = as.integer(1), g = 1:3, h = as.integer(c(NA, 
+    1, 2, 3)), i = as.character(NA), j = c("foo", NA, "bar")), .Names = c("a", 
+"b", "c", "d", "e", "f", "g", "h", "i", "j"))
 > tmp <- tempfile()
 > dput(x, tmp, control="all")
 > stopifnot(identical(dget(tmp), x))
